// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App test against snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    enabled={false}
    hitSlop={
      Object {
        "right": 50,
      }
    }
    maxDeltaY={20}
    minOffsetX={5}
    onGestureEvent={[Function]}
    onHandlerStateChange={[Function]}
  >
    <View
      style={
        Object {
          "backgroundColor": "#eee",
          "flex": 1,
          "flexDirection": "column-reverse",
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            style={
              Object {
                "backgroundColor": "#fff",
                "flex": 1,
              }
            }
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "flex": 1,
                  "resizeMode": "cover",
                }
              }
            >
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "height": undefined,
                      "width": undefined,
                    },
                    undefined,
                  ]
                }
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "color": "black",
                    "marginTop": 75,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 25,
                        "marginBottom": 6,
                        "marginTop": 30,
                      }
                    }
                  />
                </View>
                <View>
                  <Text
                    style={
                      Object {
                        "borderColor": "#fff",
                        "borderWidth": 2,
                        "color": "#fff",
                        "fontSize": 35,
                        "fontWeight": "bold",
                        "padding": 20,
                        "paddingLeft": 40,
                        "paddingRight": 40,
                      }
                    }
                  >
                    enterVal
                  </Text>
                </View>
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 20,
                        "marginTop": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 20,
                        "marginTop": 10,
                      }
                    }
                  >
                    0
                    º
                  </Text>
                </View>
                <View>
                  <View
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#007aff",
                            "fontSize": 17,
                            "fontWeight": "500",
                            "textAlign": "center",
                          },
                          null,
                          Object {
                            "backgroundColor": "#e9967a",
                            "borderColor": "#fa8072",
                            "borderRadius": 5,
                            "color": "#fff",
                            "fontSize": 20,
                            "marginTop": 400,
                            "overflow": "hidden",
                            "padding": 4,
                            "paddingLeft": 20,
                            "paddingRight": 20,
                          },
                          null,
                        ]
                      }
                    >
                      get started
                    </Text>
                  </View>
                </View>
                <View>
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 18,
                        "fontStyle": "italic",
                        "fontWeight": "bold",
                        "marginTop": 75,
                      }
                    }
                  >
                    "Keep going. Be all in."
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#FFF",
              "transform": Array [
                Object {
                  "translateX": -750,
                },
              ],
            }
          }
        >
          <View
            onLayout={[Function]}
            pointerEvents="box-none"
            style={
              Object {
                "backgroundColor": "#FFF",
                "borderBottomColor": "#A7A7AA",
                "borderBottomWidth": 0.5,
                "height": 64,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Home Screen test against snapshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "flex": 1,
      "resizeMode": "cover",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "color": "black",
        "marginTop": 75,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 25,
            "marginBottom": 6,
            "marginTop": 30,
          }
        }
      />
    </View>
    <View>
      <Text
        style={
          Object {
            "borderColor": "#fff",
            "borderWidth": 2,
            "color": "#fff",
            "fontSize": 35,
            "fontWeight": "bold",
            "padding": 20,
            "paddingLeft": 40,
            "paddingRight": 40,
          }
        }
      >
        enterVal
      </Text>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 20,
            "marginTop": 10,
          }
        }
      />
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 20,
            "marginTop": 10,
          }
        }
      >
        0
        º
      </Text>
    </View>
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 17,
                "fontWeight": "500",
                "textAlign": "center",
              },
              null,
              Object {
                "backgroundColor": "#e9967a",
                "borderColor": "#fa8072",
                "borderRadius": 5,
                "color": "#fff",
                "fontSize": 20,
                "marginTop": 400,
                "overflow": "hidden",
                "padding": 4,
                "paddingLeft": 20,
                "paddingRight": 20,
              },
              null,
            ]
          }
        >
          get started
        </Text>
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 18,
            "fontStyle": "italic",
            "fontWeight": "bold",
            "marginTop": 75,
          }
        }
      >
        "Keep going. Be all in."
      </Text>
    </View>
  </View>
</View>
`;

exports[`Login test against snapshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "flex": 1,
      "resizeMode": "cover",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff78",
        "borderColor": "#ffffff78",
        "borderRadius": 10,
        "borderWidth": 2,
        "color": "#fff",
        "flex": 1,
        "marginBottom": 280,
        "marginLeft": 5,
        "marginRight": 5,
        "marginTop": 300,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginBottom": 20,
          "marginTop": 35,
        }
      }
    >
      Login
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="black"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "black",
          "borderRadius": 10,
          "borderWidth": 1,
          "color": "black",
          "height": 40,
          "marginTop": 8,
          "padding": 5,
          "width": "90%",
          "zIndex": 1,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="black"
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "black",
          "borderRadius": 10,
          "borderWidth": 1,
          "color": "black",
          "height": 40,
          "marginTop": 8,
          "padding": 5,
          "width": "90%",
          "zIndex": 1,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#e9967a",
          "borderColor": "#e9967a",
          "borderRadius": 5,
          "borderWidth": 1,
          "height": 35,
          "marginTop": 8,
          "opacity": 1,
          "width": "35%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "marginTop": 5,
          }
        }
      >
        Login
      </Text>
    </View>
  </View>
</View>
`;

exports[`Settings test against snapshot 1`] = `
<View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#007aff",
            "fontSize": 17,
            "fontWeight": "500",
            "textAlign": "center",
          },
          null,
          Object {
            "backgroundColor": "#fa8072",
            "borderColor": "#fa8072",
            "borderRadius": 5,
            "color": "#fff",
            "fontSize": 20,
            "marginLeft": 100,
            "marginRight": 100,
            "marginTop": 700,
            "overflow": "hidden",
            "padding": 4,
            "paddingLeft": 5,
            "paddingRight": 5,
          },
          null,
        ]
      }
    >
      Log in
    </Text>
  </View>
</View>
`;

exports[`Sign up test against snapshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "flex": 1,
      "resizeMode": "cover",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff78",
        "borderColor": "#ffffff78",
        "borderRadius": 10,
        "borderWidth": 2,
        "color": "#fff",
        "flex": 1,
        "marginBottom": 280,
        "marginLeft": 5,
        "marginRight": 5,
        "marginTop": 300,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginBottom": 20,
          "marginTop": 35,
        }
      }
    >
      Get Started with EnterVal
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="black"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "black",
          "borderRadius": 10,
          "borderWidth": 1,
          "color": "black",
          "height": 40,
          "marginTop": 8,
          "padding": 5,
          "width": "90%",
          "zIndex": 1,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="black"
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "black",
          "borderRadius": 10,
          "borderWidth": 1,
          "color": "black",
          "height": 40,
          "marginTop": 8,
          "padding": 5,
          "width": "90%",
          "zIndex": 1,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#e9967a",
          "borderColor": "#e9967a",
          "borderRadius": 5,
          "borderWidth": 1,
          "height": 35,
          "marginTop": 8,
          "opacity": 1,
          "width": "35%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "marginTop": 5,
          }
        }
      >
        Sign Up
      </Text>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#e9967a",
          "borderColor": "#e9967a",
          "borderRadius": 5,
          "borderWidth": 1,
          "height": 35,
          "marginTop": 8,
          "opacity": 1,
          "width": "35%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "marginTop": 5,
          }
        }
      >
        Login
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tasks Page test against snapshot 1`] = `null`;

exports[`User Screen test against snapshot 1`] = `null`;
